# Zephyr_Blinky_Template

./: .gitignore  CMakeLists.txt  README.md  west.yml
app1/: CMakeLists.txt  prj.conf
app1/cubemx_app1/: .gitignore  CMakeLists.txt  cubemx_app1.ioc
app1/dts/playground/: props-phandles.overlay
app1/src/: main.c  usr_fun.c
app2/: CMakeLists.txt  prj.conf
app2/src/: main.c
